--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "ultraltyics-centerloss"        # 配布名（GitHub経由ならPyPI衝突なし）
+name = "ultralytics-centerloss"        # 配布名（GitHub経由ならPyPI衝突なし）
 version = "0.1.0"
 description = "Ultralytics with CenterLoss (custom build)"
 readme = "README.md"
