--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,4 +12,4 @@ requires-python = ">=3.8"
 dependencies = []
 
 [tool.setuptools.packages.find]
-include = ["ultralytics_CenterLoss*"]
+include = ["ultralytics*"]
